# Product-mall

./: pyproject.toml  requirements.txt  shop.db
api_v1/products/: crud.py  dependencies.py  shemas.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  product.py
db/: fake_db.py
src/: items_view.py  main.py
users/: crud.py  views.py
